--- a/TacoCat/Solve.html
+++ b/TacoCat/Solve.html
@@ -102,6 +102,7 @@
         $("#btntaco").on("click", function () {
             if ($("#inptaco").val() != "") {
                 let orig = $("#inptaco").val();
+                let origverse = orig.split("").reverse().join("") /*reverse the input with all of punctuation and capitalization the same*/
                 let word = $("#inptaco").val().toLowerCase() /*taking the value of our input field and forcing it to lowercase*/
                     .replace(/\s/g, '')/*replacing spaces*/.replace(/\./g, '');/*replacing .*/
 
@@ -109,10 +110,10 @@
                 let revWord = word.split("")/*acting on variable word as if it were an array + splitting letters*/.reverse().join("");
 
                 if (word === revWord) { /*checking if our changed variable is equal to our original word*/
-                    $("#tacout").html(`Your original input was "${orig}" after being cleaned it up is ${revWord} so it definitely is a Palindrome.`)
+                    $("#tacout").html(`Your original input was "${orig}" reversed it is "${origverse}" and after being cleaned it up is ${revWord} so it definitely is a Palindrome.`)
                 }
                 else { /*if it isn't we are out putting a failure message*/
-                    $("#tacout").html(`"${orig}" reversed is ${revWord} is it a Palindrome? You tell me. (No)`)
+                    $("#tacout").html(`"${orig}" reversed is ${origverse} is it a Palindrome? You tell me. (No)`)
                 }
             }
             else $("#tacout").html(`Please enter a valid word or phrase.`)
