--- a/TacoCat/Solve.html
+++ b/TacoCat/Solve.html
@@ -12,20 +12,8 @@
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <style>
-        #maincontainer{
-            margin:0 auto;
-            border:1px solid black;
-            padding:25px;
-        }
-        .btnwide{
-            margin-left:50px;
-            width:80%;
-        }
-        #tacout{
-            width:100%;
-        }
-    </style>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
+    <link href="CSS/custom.css" rel="stylesheet" />
 </head>
 
 <body>
